Create containers and elements  for header

--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
   <body>
     <div class="top">
       <div class="header">
-
+        <div class="logo">Header Logo
+        </div>
+         <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
       </div>
       <div class="top-middle">
-        
+        <div class="this-website">
+         <div class="this-website is-awesome">This website is awesome</div>
+         <div class="this-website has">This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+         <div class="signup">Sign up</div> 
+        </div> 
+        <div class="top-placeholder">this is a placeholder image</div>
       </div>
     </div>
     <div class="body-one"></div>
