--- a/index.html
+++ b/index.html
@@ -26,8 +26,25 @@
         <div class="top-placeholder">this is a placeholder image</div>
       </div>
     </div>
-    <div class="body-one"></div>
-    <div class="body-two"></div>
+    <div class="body-one">
+     <div class="body-one header">Some random information.</div>
+      <div class="boxes">
+        <div class="box-one"></div>
+        <div class="box-two"></div>
+        <div class="box-three"></div>
+        <div class="box-four"></div>
+      </div>
+      <div class="subtexts">
+        <div class="text-one">this is some subtexts under an illustration or image</div>
+        <div class="text-two">this is some subtexts under an illustration or image</div>
+        <div class="text-three">this is some subtexts under an illustration or image</div>
+        <div class="text-four">this is some subtexts under an illustration or image</div>
+      </div> 
+    </div>
+    <div class="body-two">
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+      <div class="author">-Thor, God of Thunder</div>
+    </div>
     <div class="contact"></div>
     <div class="footer"></div>
   </body>
