--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
       <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
       <div class="author">-Thor, God of Thunder</div>
     </div>
-    <div class="contact"></div>
-    <div class="footer"></div>
+    <div class="contact">
+      <div class="contact-text">
+        <div class="call">Call to action! It's time!</div>
+        <div class="call-subtext">Sign up for our product by clicking that button over there!</div>
+        <div class="call-signup">Sign up</div>
+      </div>
+    </div>
+    <div class="footer">
+    Copyright © The Odin Project 2021
+    </div>
   </body>
