Add and changed containers, added css to header

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
           <li><a href="#">header link three</a></li>
       </div>
       <div class="top-middle">
-        <div class="this-website">
-         <div class="this-website is-awesome">This website is awesome</div>
-         <div class="this-website has">This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-         <div class="signup">Sign up</div> 
-        </div> 
-        <div class="top-placeholder">this is a placeholder image</div>
+        <div class="container-top">
+          <div class="this-website">
+           <div class="this-website is-awesome">This website is awesome</div>
+           <div class="this-website has">This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+           <button class="signup">Sign up</button> 
+          </div> 
+         <div class="top-placeholder">this is a placeholder image</div>
+        </div>
       </div>
     </div>
     <div class="body-one">
@@ -49,7 +51,7 @@
       <div class="contact-text">
         <div class="call">Call to action! It's time!</div>
         <div class="call-subtext">Sign up for our product by clicking that button over there!</div>
-        <div class="call-signup">Sign up</div>
+        <div class="call-button">Sign up</div>
       </div>
     </div>
     <div class="footer">
