Finish Header and started body-one

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container-top">
           <div class="this-website">
            <div class="this-website is-awesome">This website is awesome</div>
-           <div class="this-website has">This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+           <div class="this-website has">This website has awesome subtext that goes here under the main title. It's a smaller font and the color is lower <br>contrast</div>
            <button class="signup">Sign up</button> 
           </div> 
          <div class="top-placeholder">this is a placeholder image</div>
@@ -31,10 +31,10 @@
     <div class="body-one">
      <div class="body-one header">Some random information.</div>
       <div class="boxes">
-        <div class="box-one"></div>
-        <div class="box-two"></div>
-        <div class="box-three"></div>
-        <div class="box-four"></div>
+        <div class="box one"></div>
+        <div class="box two"></div>
+        <div class="box three"></div>
+        <div class="box four"></div>
       </div>
       <div class="subtexts">
         <div class="text-one">this is some subtexts under an illustration or image</div>
