--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
       </div>  
     </div>
     <div class="body-two">
-      <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+      <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
       <div class="author">-Thor, God of Thunder</div>
     </div>
     <div class="contact">
       <div class="contact-text">
-        <div class="call">Call to action! It's time!</div>
-        <div class="call-subtext">Sign up for our product by clicking that button over there!</div>
-        <div class="call-button">Sign up</div>
+        <div class="contact-left">  
+          <div class="call">Call to action! It's time!</div>
+          <div class="call-subtext">Sign up for our product by clicking that button over there!</div>
+        </div>
+          <div class="call-button">Sign up</div>
       </div>
     </div>
     <div class="footer">
