--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="call">Call to action! It's time!</div>
           <div class="call-subtext">Sign up for our product by clicking that button over there!</div>
         </div>
-          <div class="call-button">Sign up</div>
+          <button class="call-button">Sign up</button>
       </div>
     </div>
     <div class="footer">
